Made font smaller for my stocks. Fixed overflow.

--- a/client/src/pages/MainPage.css
+++ b/client/src/pages/MainPage.css
@@ -71,44 +71,6 @@
   width: 100%;
   padding-bottom: 20px;
 }
-/* Styles for the main action buttons */
-
-.my-stocks-button {
-  background-color: #3b3b3b;
-  color: #06a94d;
-  flex: 3;
-  min-height: 400px;
-  min-width: 300px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 15px;
-  position: relative;
-  max-height: 1000px;
-  max-width: 1000px;
-}
-.news-button {
-  flex: 1;
-  background-color: #3b3b3b;
-  color: #06a94d;
-  border: none;
-  min-height: 400px;
-  min-width: 100px;
-  max-height: 2000px;
-  max-width: 300px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 15px;
-  position: relative;
-}
 
 /* Navigation buttons container */
 
@@ -158,6 +120,7 @@ h2 {
 
 .stock-container {
   min-width: 70%;
+  font-size: 14px;
 }
 
 .stock-header {
